--- a/app/views/providers/new.html.erb
+++ b/app/views/providers/new.html.erb
@@ -2,6 +2,8 @@
 <% content_for :title do %> Novo Prestador - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
-<h1>Novo prestador</h1>
+<div class="servicos">
+	<h1>Novo prestador</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
