--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -2,6 +2,8 @@
 <% content_for :title do %> Atualizar inscrição - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
-<h1>Editar inscrição - <%= @course.name %></h1>
+<div class="cursos">
+	<h1>Editar inscrição - <%= @course.name %></h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
