--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -2,6 +2,8 @@
 <% content_for :title do %> Agendar Serviço - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
-<h1>Agendar Serviço</h1>
+<div class="servicos">
+	<h1>Agendar Serviço</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
