--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -2,6 +2,8 @@
 <% content_for :title do %> Novo cursos - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
-<h1>Novo curso</h1>
+<div class="cursos">
+	<h1>Novo curso</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
