--- a/app/views/interesteds/edit.html.erb
+++ b/app/views/interesteds/edit.html.erb
@@ -2,6 +2,8 @@
 <% content_for :title do %> Atualizar interessados - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
-<h1>Editar Interessado - <%= @interesteds.name %></h1>
+<div class="cursos">
+	<h1>Editar Interessado - <%= @interesteds.name %></h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
