--- a/app/views/interesteds/history.html.erb
+++ b/app/views/interesteds/history.html.erb
@@ -1,31 +1,32 @@
 <!-- TITLE -->
 <% content_for :title do %> Novo histórico interessado - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
+<div class="cursos">
+    <h1>Novo contato - <%= @interesteds.name %></h1>
 
-<h1>Novo contato - <%= @interesteds.name %></h1>
+    <%= form_for @interesteds, :url => interested_contact_save_path(@interesteds) do |w| %>
+        <%= w.fields_for :interested_contacts do |i| %>
+            <% if i.object.id.nil? %>
+                <ul>
+                    <li>
+                        <label>
+                            <span>Data: </span><br/>
+                            <%= i.text_field :date, :class => "select" %>
+                        </label>
+                    </li>
 
-<%= form_for @interesteds, :url => interested_contact_save_path(@interesteds) do |w| %>
-    <%= w.fields_for :interested_contacts do |i| %>
-        <% if i.object.id.nil? %>
-            <ul>
-                <li>
-                    <label>
-                        <span>Data: </span><br/>
-                        <%= i.text_field :date, :class => "select" %>
-                    </label>
-                </li>
-
-                <li>
-                    <label>
-                        <span>Interesses: </span><br/>
-                        <%= i.text_area :description, :class => "inputMedio input" %>
-                    </label>
-                </li>
+                    <li>
+                        <label>
+                            <span>Interesses: </span><br/>
+                            <%= i.text_area :description, :class => "inputMedio input" %>
+                        </label>
+                    </li>
+            <% end %>
         <% end %>
-    <% end %>
 
-        <li class="btEnviarForm">
-            <%= w.submit 'Gravar contato' %>
-        </li>
-    </ul>
-<% end %>
+            <li class="btEnviarForm">
+                <%= w.submit 'Gravar contato' %>
+            </li>
+        </ul>
+    <% end %>
+</div>
