--- a/app/views/receipts/new.html.erb
+++ b/app/views/receipts/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Novo Recebimento</h1>
-<p>
-  Deveria estar gerando um lançamento no financeiro para o codigo: <%= @object.code %><br/>
-  Mas é só um teste, calmae ;)
-</p>
+<div class="financeiro">
+	<h1>Novo Recebimento</h1>
+	<p>
+	  Deveria estar gerando um lançamento no financeiro para o codigo: <%= @object.code %><br/>
+	  Mas é só um teste, calmae ;)
+	</p>
+</div>
