--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -2,6 +2,8 @@
 <% content_for :title do %> Nova inscrição - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
-<h1>Nova inscrição</h1>
+<div class="cursos">
+	<h1>Nova inscrição</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
