--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -1,7 +1,7 @@
 <!-- TITLE -->
 <% content_for :title do %> Editar Agendamento - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
-
-<h1>Editar Agendamento</h1>
-
-<%= render 'form' %>
+<div class="servicos">
+	<h1>Editar Agendamento</h1>
+	<%= render 'form' %>
+</div>
