--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,78 +1,79 @@
 <!-- TITLE -->
 <% content_for :title do %> Clientes - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
+<div class="servicos">
+  <h1>Agendar Serviços</h1>
 
-<h1>Agendar Serviços</h1>
+  <div id="guardaPesquisa">
+    <%= form_for :filtro, :url => search_schedules_path, :method => "GET" do |f| %>
+      <ul>
+        <li class="noPaddingHomes">
+          <label for="campoNome">Nome</label>
+          <%= f.text_field :rg, :class => "inputGde input", :id => 'name' %>
+        </li>
 
-<div id="guardaPesquisa">
-  <%= form_for :filtro, :url => search_schedules_path, :method => "GET" do |f| %>
-    <ul>
-      <li class="noPaddingHomes">
-        <label for="campoNome">Nome</label>
-        <%= f.text_field :rg, :class => "inputGde input", :id => 'name' %>
-      </li>
+        <li class="escondidoPesquisaAvancada">
+          <label for="campoNome">Numero de Dias</label>
+          <%= f.text_field :number_days, :class => "inputGde input", :id => 'number_days' %>
+        </li>
 
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoNome">Numero de Dias</label>
-        <%= f.text_field :number_days, :class => "inputGde input", :id => 'number_days' %>
-      </li>
+        <li class="escondidoPesquisaAvancada">
+          <label for="campoNome">Tempo Estimado</label>
+          <%= f.text_field :estimated_time, :class => "inputGde input", :id => 'estimated_time' %>
+        </li>
 
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoNome">Tempo Estimado</label>
-        <%= f.text_field :estimated_time, :class => "inputGde input", :id => 'estimated_time' %>
-      </li>
+        <li class="escondidoPesquisaAvancada">
+          <label for="campoNome">Valor Padrão</label>
+          <%= f.text_field :default_value, :class => "inputGde input", :id => 'default_value' %>
+        </li>
 
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoNome">Valor Padrão</label>
-        <%= f.text_field :default_value, :class => "inputGde input", :id => 'default_value' %>
-      </li>
+        <li class="escondidoPesquisaAvancada">
+          <label for="campoNome">Ativo:</label>
+          <%= f.select :inactive, [["Sim",true],["Não",false]], { :include_blank => true }, :class => "select" %>
+        </li>
+        <li class="liPesquisaAvancada">
+          <%= link_to 'Pesquisa avançada', 'javascript:void(0);', :class => 'pesquisaAvancada', :id => 'btPesquisaAvancada' %>
+          <%= f.submit 'Pesquisar', :class => 'btEditarForm', :id => 'ajaxBtRealizarPesquisa' %>
+        </li>
+      </ul>
+    <% end %>
+  <%= link_to 'Agendar Serviço', new_schedule_path, class: "btEnviarForm" %>
+  </div>
 
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoNome">Ativo:</label>
-        <%= f.select :inactive, [["Sim",true],["Não",false]], { :include_blank => true }, :class => "select" %>
-      </li>
-      <li class="liPesquisaAvancada">
-        <%= link_to 'Pesquisa avançada', 'javascript:void(0);', :class => 'pesquisaAvancada', :id => 'btPesquisaAvancada' %>
-        <%= f.submit 'Pesquisar', :class => 'btEditarForm', :id => 'ajaxBtRealizarPesquisa' %>
-      </li>
-    </ul>
-  <% end %>
-<%= link_to 'Agendar Serviço', new_schedule_path, class: "btEnviarForm" %>
-</div>
+  <div id="guardaAtividadesRecentes">
+    <h2>Últimos serviços</h2>
+    <% @schedules.each do |schedule| %>
+      <p>
+        <span><%= schedule.service.name %></span>
+        <span><%= schedule.estimated_time %></span>
+        <span><%= number_to_currency schedule.service.default_value %></span>
+        <%= link_to 'Editar', edit_schedule_path(schedule), :class => 'btVoltarForm' %>
+      </p>
+    <% end %>
+  </div>
 
-<div id="guardaAtividadesRecentes">
-  <h2>Últimos serviços</h2>
-  <% @schedules.each do |schedule| %>
-    <p>
-      <span><%= schedule.service.name %></span>
-      <span><%= schedule.estimated_time %></span>
-      <span><%= number_to_currency schedule.service.default_value %></span>
-      <%= link_to 'Editar', edit_schedule_path(schedule), :class => 'btVoltarForm' %>
-    </p>
-  <% end %>
-</div>
+  <div id="guardaResultadoPesquisa">
+  </div>
+  <script type="text/javascript" charset="utf-8">
+  $("#ajaxBtRealizarPesquisa").click(function(e){
+    e.preventDefault();
 
-<div id="guardaResultadoPesquisa">
-</div>
-<script type="text/javascript" charset="utf-8">
-$("#ajaxBtRealizarPesquisa").click(function(e){
-  e.preventDefault();
-
-  $.ajax({
-    url:  "<%= search_schedules_path %>",
-    type: "GET",
-    data: {
-      "filtro" : {
-        "name"          : $("#name").val(),
-        "number_days"   : $("#number_days").val(),
-        "estimated_time": $("#estimated_time").val(),
-        "default_value" : $("#default_value").val(),
-        "inactive"      : $("#filtro_inactive").val()
+    $.ajax({
+      url:  "<%= search_schedules_path %>",
+      type: "GET",
+      data: {
+        "filtro" : {
+          "name"          : $("#name").val(),
+          "number_days"   : $("#number_days").val(),
+          "estimated_time": $("#estimated_time").val(),
+          "default_value" : $("#default_value").val(),
+          "inactive"      : $("#filtro_inactive").val()
+        }
       }
-    }
-    }).done(function(data){
-      $("#guardaResultadoPesquisa").html(data);
-      $("#guardaResultadoPesquisa").slideDown(500);
+      }).done(function(data){
+        $("#guardaResultadoPesquisa").html(data);
+        $("#guardaResultadoPesquisa").slideDown(500);
+    });
   });
-});
-</script>
+  </script>
+</div>
