--- a/app/views/services/edit.html.erb
+++ b/app/views/services/edit.html.erb
@@ -1,7 +1,8 @@
 <!-- TITLE -->
 <% content_for :title do %> Editar Usuário - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
+<div class="servicos">
+	<h1>Editar serviço</h1>
 
-<h1>Editar serviço</h1>
-
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
