--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,55 +1,56 @@
 <!-- TITLE -->
 <% content_for :title do %> Clientes - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
+<div class="servicos">
+  <h1>Serviços</h1>
 
-<h1>Serviços</h1>
+  <div id="guardaPesquisa">
+    <%= form_for :filtro, :url => search_services_path, :method => "GET" do |f| %>
+      <ul>
+        <li class="noPaddingHomes">
+          <label for="campoNome">Nome</label>
+          <%= f.text_field :rg, :class => "inputGde input", :id => 'name' %>
+        </li>
 
-<div id="guardaPesquisa">
-  <%= form_for :filtro, :url => search_services_path, :method => "GET" do |f| %>
-    <ul>
-      <li class="noPaddingHomes">
-        <label for="campoNome">Nome</label>
-        <%= f.text_field :rg, :class => "inputGde input", :id => 'name' %>
-      </li>
+        <li class="escondidoPesquisaAvancada">
+          <label for="campoNome">Numero de Dias</label>
+          <%= f.text_field :number_days, :class => "inputGde input", :id => 'number_days' %>
+        </li>
 
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoNome">Numero de Dias</label>
-        <%= f.text_field :number_days, :class => "inputGde input", :id => 'number_days' %>
-      </li>
+        <li class="escondidoPesquisaAvancada">
+          <label for="campoNome">Tempo Estimado</label>
+          <%= f.text_field :estimated_time, :class => "inputGde input", :id => 'estimated_time' %>
+        </li>
 
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoNome">Tempo Estimado</label>
-        <%= f.text_field :estimated_time, :class => "inputGde input", :id => 'estimated_time' %>
-      </li>
+        <li class="escondidoPesquisaAvancada">
+          <label for="campoNome">Valor Padrão</label>
+          <%= f.text_field :default_value, :class => "inputGde input", :id => 'default_value' %>
+        </li>
 
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoNome">Valor Padrão</label>
-        <%= f.text_field :default_value, :class => "inputGde input", :id => 'default_value' %>
-      </li>
+        <li class="escondidoPesquisaAvancada">
+          <label for="campoNome">Ativo:</label>
+          <%= f.select :inactive, [["Sim",true],["Não",false]], { :include_blank => true }, :class => "select" %>
+        </li>
+        <li class="liPesquisaAvancada">
+          <%= link_to 'Pesquisa avançada', 'javascript:void(0);', :class => 'pesquisaAvancada', :id => 'btPesquisaAvancada' %>
+          <%= f.submit 'Pesquisar', :class => 'btEditarForm', :id => 'ajaxBtRealizarPesquisa' %>
+        </li>
+      </ul>
+    <% end %>
+  <%= link_to 'Novo Serviço', new_service_path, class: "btEnviarForm" %>
+  </div>
 
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoNome">Ativo:</label>
-        <%= f.select :inactive, [["Sim",true],["Não",false]], { :include_blank => true }, :class => "select" %>
-      </li>
-      <li class="liPesquisaAvancada">
-        <%= link_to 'Pesquisa avançada', 'javascript:void(0);', :class => 'pesquisaAvancada', :id => 'btPesquisaAvancada' %>
-        <%= f.submit 'Pesquisar', :class => 'btEditarForm', :id => 'ajaxBtRealizarPesquisa' %>
-      </li>
-    </ul>
-  <% end %>
-<%= link_to 'Novo Serviço', new_service_path, class: "btEnviarForm" %>
-</div>
-
-<div id="guardaAtividadesRecentes">
-  <h2>Últimos serviços</h2>
-  <% @services.each do |service| %>
-    <p>
-      <span><%= service.name %></span>
-      <span><%= service.estimated_time %></span>
-      <span><%= number_to_currency service.default_value %></span>
-      <%= link_to 'Editar', edit_service_path(service), :class => 'btVoltarForm' %>
-    </p>
-  <% end %>
+  <div id="guardaAtividadesRecentes">
+    <h2>Últimos serviços</h2>
+    <% @services.each do |service| %>
+      <p>
+        <span><%= service.name %></span>
+        <span><%= service.estimated_time %></span>
+        <span><%= number_to_currency service.default_value %></span>
+        <%= link_to 'Editar', edit_service_path(service), :class => 'btVoltarForm' %>
+      </p>
+    <% end %>
+  </div>
 </div>
 
 <div id="guardaResultadoPesquisa">
