--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -1,7 +1,8 @@
 <!-- TITLE -->
 <% content_for :title do %> Novo Cliente - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
+<div class="servicos">
+	<h1>Novo Serviço</h1>
 
-<h1>Novo Serviço</h1>
-
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
