--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,7 +1,8 @@
 <!-- TITLE -->
 <% content_for :title do %> Atualizar turma - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
+<div class="cursos">
+	<h1>Editar turma - <%= @team.name %></h1>
 
-<h1>Editar turma - <%= @team.name %></h1>
-
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
