--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -2,95 +2,97 @@
 <% content_for :title do %> Financeiro - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
-<h1>Pagamentos</h1>
+<div class="financeiro">
+  <h1>Pagamentos</h1>
 
-<div id="guardaPesquisa">
-  <%= form_for "filtro",:url => financeiro_index_path, :method => 'GET' do |f| %>
-    <ul>
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoCodigo">Código</label>
-        <%= f.text_field :code, :class => "inputGde input", :id => 'campoCodigo' %>
-      </li>
+  <div id="guardaPesquisa">
+    <%= form_for "filtro",:url => financeiro_index_path, :method => 'GET' do |f| %>
+      <ul>
+        <li class="escondidoPesquisaAvancada">
+          <label for="campoCodigo">Código</label>
+          <%= f.text_field :code, :class => "inputGde input", :id => 'campoCodigo' %>
+        </li>
 
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoNome">Nome</label>
-        <%= f.text_field :name, :class => "inputGde input", :id => 'campoNome' %>
-      </li>
+        <li class="escondidoPesquisaAvancada">
+          <label for="campoNome">Nome</label>
+          <%= f.text_field :name, :class => "inputGde input", :id => 'campoNome' %>
+        </li>
 
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoCategoria">Categoria</label>
-        <%= f.select :category_id, categories, {:include_blank => true}, :class => 'select selectGde', :id => 'campoCategoria' %>
-      </li>
+        <li class="escondidoPesquisaAvancada">
+          <label for="campoCategoria">Categoria</label>
+          <%= f.select :category_id, categories, {:include_blank => true}, :class => 'select selectGde', :id => 'campoCategoria' %>
+        </li>
 
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoCategoria">Status</label>
-        <%= f.select :status_id, status, {:include_blank => true}, :class => 'select selectGde', :id => 'campoCategoria' %>
-      </li>
+        <li class="escondidoPesquisaAvancada">
+          <label for="campoCategoria">Status</label>
+          <%= f.select :status_id, status, {:include_blank => true}, :class => 'select selectGde', :id => 'campoCategoria' %>
+        </li>
 
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoCategoria">Forma de pagamento</label>
-        <%= f.select :payment_id, payments, {:include_blank => true}, :class => 'select selectGde', :id => 'campoCategoria' %>
-      </li>
+        <li class="escondidoPesquisaAvancada">
+          <label for="campoCategoria">Forma de pagamento</label>
+          <%= f.select :payment_id, payments, {:include_blank => true}, :class => 'select selectGde', :id => 'campoCategoria' %>
+        </li>
 
-      <li class="escondidoPesquisaAvancada doisInputs">
-        <label for="campoValor">Valor de </label>
-        <%= f.text_field :amount_minimun, :class => "inputPeq input", :id => 'campoValor' %>
-        <label for="campoAte" class="primeiro"> até </label>
-        <%= f.text_field :amount_max, :class => "inputPeq input", :id => 'campoAte' %>
-      </li>
+        <li class="escondidoPesquisaAvancada doisInputs">
+          <label for="campoValor">Valor de </label>
+          <%= f.text_field :amount_minimun, :class => "inputPeq input", :id => 'campoValor' %>
+          <label for="campoAte" class="primeiro"> até </label>
+          <%= f.text_field :amount_max, :class => "inputPeq input", :id => 'campoAte' %>
+        </li>
 
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoParcela">Parcela nº</label>
-        <%= f.text_field :number, :class => "inputGde input", :id => 'campoParcela' %>
-      </li>
+        <li class="escondidoPesquisaAvancada">
+          <label for="campoParcela">Parcela nº</label>
+          <%= f.text_field :number, :class => "inputGde input", :id => 'campoParcela' %>
+        </li>
 
-      <li class="escondidoPesquisaAvancada">
-        <%= f.check_box :fixed_payment %> <span>Despesa fixa</span>
-      </li>
+        <li class="escondidoPesquisaAvancada">
+          <%= f.check_box :fixed_payment %> <span>Despesa fixa</span>
+        </li>
 
-      <li class="noPaddingHomes hidePA ">
-        <label for="campoBusca">Código</label>
-        <%= f.text_field :code_simple, :class => "inputGde input", :id => 'campoBusca' %>
-      </li>
+        <li class="noPaddingHomes hidePA ">
+          <label for="campoBusca">Código</label>
+          <%= f.text_field :code_simple, :class => "inputGde input", :id => 'campoBusca' %>
+        </li>
 
-      <li class="liPesquisaAvancada">
-        <%= link_to 'Pesquisa avançada', 'javascript:void(0);', :class => 'pesquisaAvancada', :id => 'btPesquisaAvancada' %>
-        <%= f.submit 'Pesquisar', :class=> 'btEditarForm', :id => 'ajaxBtRealizarPesquisa' %>
-      </li>
-    </ul>
-  <% end %>
-<%= link_to "Novo pagamento", novo_pagamento_path, class: "btEnviarForm" %>
+        <li class="liPesquisaAvancada">
+          <%= link_to 'Pesquisa avançada', 'javascript:void(0);', :class => 'pesquisaAvancada', :id => 'btPesquisaAvancada' %>
+          <%= f.submit 'Pesquisar', :class=> 'btEditarForm', :id => 'ajaxBtRealizarPesquisa' %>
+        </li>
+      </ul>
+    <% end %>
+  <%= link_to "Novo pagamento", novo_pagamento_path, class: "btEnviarForm" %>
 
-</div>
+  </div>
 
-<div id="guardaAtividadesRecentes">
-  <h2>Pagamentos mais próximos</h2>
-  <% @instalments_recents.each do |i| %>
-    <p>
-      <span><%= i.name %></span>
-      <span><%= number_to_currency(i.amount) %></span>
-      <span><%= i.expiration_date_to_s %></span>
-      <%= link_to 'Visualizar', financeiro_editar_lancamento_path(i.release), :class => 'btVoltarForm' %>
-    </p>
-  <% end %>
-</div>
-<div id="guardaResultadoPesquisa">
-</div>
-<script type="text/javascript" charset="utf-8">
-$("#ajaxBtRealizarPesquisa").click(function(e) {
-  e.preventDefault();
+  <div id="guardaAtividadesRecentes">
+    <h2>Pagamentos mais próximos</h2>
+    <% @instalments_recents.each do |i| %>
+      <p>
+        <span><%= i.name %></span>
+        <span><%= number_to_currency(i.amount) %></span>
+        <span><%= i.expiration_date_to_s %></span>
+        <%= link_to 'Visualizar', financeiro_editar_lancamento_path(i.release), :class => 'btVoltarForm' %>
+      </p>
+    <% end %>
+  </div>
+  <div id="guardaResultadoPesquisa">
+  </div>
+  <script type="text/javascript" charset="utf-8">
+  $("#ajaxBtRealizarPesquisa").click(function(e) {
+    e.preventDefault();
 
-  $.ajax({
-    url:  "<%= financeiro_pagamentos_search_path %>",
-    type: "GET",
-    data: {
-      "filtro": {
-        "code": $("#campoBusca").val()
+    $.ajax({
+      url:  "<%= financeiro_pagamentos_search_path %>",
+      type: "GET",
+      data: {
+        "filtro": {
+          "code": $("#campoBusca").val()
+        }
       }
-    }
-  }).done(function(data) {
-    $("#guardaResultadoPesquisa").html(data);
-    $("#guardaResultadoPesquisa").slideDown(500);
+    }).done(function(data) {
+      $("#guardaResultadoPesquisa").html(data);
+      $("#guardaResultadoPesquisa").slideDown(500);
+    });
   });
-});
-</script>
+  </script>
+</div>
